# pathtrace

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/system/: mod.rs  models.rs  platform.rs
