[package]
name = "pathtrace"
version = "0.1.0"
description = "PathTrace - Network Decision Analyzer"
authors = ["PathTrace"]
edition = "2021"

[lib]
name = "pathtrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
ipnetwork = "0.20"
dns-lookup = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Foundation"
] }
